objects/Transaction_Journal_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transaction Journal Entries</relationshipLabel>
        <relationshipName>Transaction_Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Base_Currency_Amount__c</fullName>
        <label>Base Currency Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Currency_FX_Date__c</fullName>
        <label>Base Currency FX Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Base_Currency_FX_Rate__c</fullName>
        <label>Base Currency FX Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Currency__c</fullName>
        <label>Base Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_GL_Treatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing GL Treatment</label>
        <referenceTo>blng__GLTreatment__c</referenceTo>
        <relationshipLabel>Transaction Journal Entries (Billing GL Treatment)</relationshipLabel>
        <relationshipName>Transaction_Journal_Entries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Set via process builder from GL treatment</description>
        <inlineHelpText>Set via process builder from GL treatment</inlineHelpText>
        <label>Credit GL Account</label>
        <referenceTo>blng__GLAccount__c</referenceTo>
        <relationshipLabel>Transaction Journal Entries</relationshipLabel>
        <relationshipName>Transaction_Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit__c</fullName>
        <label>Credit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Set via process builder from GL treatment</description>
        <inlineHelpText>Set via process builder from GL treatment</inlineHelpText>
        <label>Debit GL Account</label>
        <referenceTo>blng__GLAccount__c</referenceTo>
        <relationshipLabel>Transaction Journal Entries (Debit GL Account)</relationshipLabel>
        <relationshipName>Transaction_Journal_Entries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Debit__c</fullName>
        <label>Debit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Book</label>
        <referenceTo>blng__FinanceBook__c</referenceTo>
        <relationshipLabel>Transaction Journal Entries</relationshipLabel>
        <relationshipName>Transaction_Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finance_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Period</label>
        <referenceTo>blng__FinancePeriod__c</referenceTo>
        <relationshipLabel>Transaction Journal Entries</relationshipLabel>
        <relationshipName>Transaction_Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line</label>
        <referenceTo>blng__InvoiceLine__c</referenceTo>
        <relationshipLabel>Transaction Journal Entries</relationshipLabel>
        <relationshipName>Transaction_Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <referenceTo>blng__LegalEntity__c</referenceTo>
        <relationshipLabel>Transaction Journal Entries</relationshipLabel>
        <relationshipName>Transaction_Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Posting_Date__c</fullName>
        <label>Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Posting_Status__c</fullName>
        <label>Posting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_GL_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revenue GL Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Credit_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Set via process builder from Tax GL treatment</description>
        <inlineHelpText>Set via process builder from Tax GL treatment</inlineHelpText>
        <label>Tax Credit GL Account</label>
        <referenceTo>blng__GLAccount__c</referenceTo>
        <relationshipLabel>Transaction Journal Entries (Tax Credit GL Account)</relationshipLabel>
        <relationshipName>Transaction_Journal_Entries2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Debit_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Set via process builder from Tax GL treatment</description>
        <inlineHelpText>Set via process builder from Tax GL treatment</inlineHelpText>
        <label>Tax Debit GL Account</label>
        <referenceTo>blng__GLAccount__c</referenceTo>
        <relationshipLabel>Transaction Journal Entries (Tax Debit GL Account)</relationshipLabel>
        <relationshipName>Transaction_Journal_Entries3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_GL_Treatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax GL Treatment</label>
        <referenceTo>blng__GLTreatment__c</referenceTo>
        <relationshipLabel>Transaction Journal Entries</relationshipLabel>
        <relationshipName>Transaction_Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_CR_Base__c</fullName>
        <label>Total CR Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_CR__c</fullName>
        <label>Total CR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_DR_Base__c</fullName>
        <label>Total DR Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_DR__c</fullName>
        <label>Total DR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <label>Transaction Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Journal_Entry_Number__c</fullName>
        <displayFormat>TJE-{0000000000}</displayFormat>
        <label>Transaction Journal Entry Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice Line</fullName>
                </value>
                <value>
                    <fullName>Debit Note Line</fullName>
                </value>
                <value>
                    <fullName>Debit Note Line Allocation (Invoice Line)</fullName>
                </value>
                <value>
                    <fullName>Debit Note Line Allocation (Credit Note Line)</fullName>
                </value>
                <value>
                    <fullName>Credit Note Line</fullName>
                </value>
                <value>
                    <fullName>Credit Note Allocation</fullName>
                </value>
                <value>
                    <fullName>Revenue Transaction</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Payment Allocation (Invoice)</fullName>
                </value>
                <value>
                    <fullName>Payment Allocation (Invoice Line)</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Refund Line (Payment)</fullName>
                </value>
                <value>
                    <fullName>Refund Line (Credit Note Line)</fullName>
                </value>
                <value>
                    <fullName>Realized Gain/Loss</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transaction Journal Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Credit_GL_Account__c</columns>
        <columns>Total_CR__c</columns>
        <columns>Debit_GL_Account__c</columns>
        <columns>Total_DR__c</columns>
        <columns>Finance_Period__c</columns>
        <columns>Legal_Entity__c</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Transaction_Journal_Entries</fullName>
        <columns>NAME</columns>
        <columns>Credit_GL_Account__c</columns>
        <columns>Total_CR__c</columns>
        <columns>Debit_GL_Account__c</columns>
        <columns>Total_DR__c</columns>
        <columns>Finance_Period__c</columns>
        <columns>Legal_Entity__c</columns>
        <filterScope>Mine</filterScope>
        <label>Transaction Journal Entries</label>
    </listViews>
    <nameField>
        <displayFormat>TJE-{000000}</displayFormat>
        <label>Transaction Journal Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Journal Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>No_DePosting</fullName>
        <active>true</active>
        <errorConditionFormula>Posted__c &amp;&amp; ISPICKVAL(Posting_Status__c, &quot;Draft&quot;)</errorConditionFormula>
        <errorMessage>Journal Entry has already been posted. You cannot de-post it.</errorMessage>
    </validationRules>
</CustomObject>